header font spacing fixes

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -209,7 +209,7 @@ header nav .nav-sections ul > li > ul > li {
     content: '';
     display: inline-block;
     position: absolute;
-    top: 0.3em;
+    top: 2.5em;
     right: 0px;
     transform: rotate(135deg);
     width: 5px;
@@ -240,7 +240,7 @@ header nav .nav-sections ul > li > ul > li {
   }
 
  header nav .nav-sections .default-content-wrapper > ul > li.nav-drop {
-    padding-right: 15px;
+    margin-right: 8px;
   }
 
   header nav .nav-sections .default-content-wrapper > ul > li > ul {
